--- a/all-time_albums.ipynb
+++ b/all-time_albums.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 41,
    "id": "ccf397a4",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
        "4    5        WHAT'S THE STORY MORNING GLORY    OASIS  1995        1"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 42,
    "id": "9da715d5",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "47"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 43,
    "id": "8ed331b2",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        "Name: ARTYSTA, dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 44,
    "id": "377d6e08",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "4    5        WHAT'S THE STORY MORNING GLORY    OASIS  1995"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 45,
    "id": "4c75f872",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
        "Name: Rok, dtype: int64"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 46,
    "id": "b4e865a1",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
        "22"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 47,
    "id": "a6447726",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
        "26   27    25   ADELE  2015"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,77 +403,345 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 48,
    "id": "a1bff143",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rok</th>\n",
+       "      <th>Tytul</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Artysta</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ABBA</th>\n",
+       "      <td>1975</td>\n",
+       "      <td>GREATEST HITS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ADELE</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ALANIS MORISSETTE</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>JAGGED LITTLE PILL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AMY WINEHOUSE</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>BACK TO BLACK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BEATLES</th>\n",
+       "      <td>1967</td>\n",
+       "      <td>SGT PEPPER'S LONELY HEARTS CLUB BAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BOB MARLEY &amp; THE WAILERS</th>\n",
+       "      <td>1984</td>\n",
+       "      <td>LEGEND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>COLDPLAY</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>PARACHUTES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CORRS</th>\n",
+       "      <td>1997</td>\n",
+       "      <td>TALK ON CORNERS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DAVID GRAY</th>\n",
+       "      <td>1998</td>\n",
+       "      <td>WHITE LADDER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DIDO</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>NO ANGEL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DIRE STRAITS</th>\n",
+       "      <td>1985</td>\n",
+       "      <td>BROTHERS IN ARMS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ED SHEERAN</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EMINEM</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>THE MARSHALL MATHERS LP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FLEETWOOD MAC</th>\n",
+       "      <td>1977</td>\n",
+       "      <td>RUMOURS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GEORGE MICHAEL</th>\n",
+       "      <td>1998</td>\n",
+       "      <td>LADIES &amp; GENTLEMEN - THE BEST OF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>JAMES BLUNT</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>BACK TO BEDLAM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>JEFF WAYNE</th>\n",
+       "      <td>1978</td>\n",
+       "      <td>THE WAR OF THE WORLDS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KEANE</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>HOPES AND FEARS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KINGS OF LEON</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>ONLY BY THE NIGHT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LADY GAGA</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>THE FAME</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LEONA LEWIS</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>SPIRIT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MADONNA</th>\n",
+       "      <td>1990</td>\n",
+       "      <td>THE IMMACULATE COLLECTION</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MEAT LOAF</th>\n",
+       "      <td>1977</td>\n",
+       "      <td>BAT OUT OF HELL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MICHAEL BUBLE</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>CRAZY LOVE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MICHAEL JACKSON</th>\n",
+       "      <td>1982</td>\n",
+       "      <td>THRILLER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MIKE OLDFIELD</th>\n",
+       "      <td>1973</td>\n",
+       "      <td>TUBULAR BELLS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NORAH JONES</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>COME AWAY WITH ME</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OASIS</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>WHAT'S THE STORY MORNING GLORY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ORIGINAL CAST RECORDING</th>\n",
+       "      <td>1965</td>\n",
+       "      <td>THE SOUND OF MUSIC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ORIGINAL SOUNDTRACK</th>\n",
+       "      <td>1977</td>\n",
+       "      <td>GREASE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PAUL SIMON</th>\n",
+       "      <td>1986</td>\n",
+       "      <td>GRACELAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PHIL COLLINS</th>\n",
+       "      <td>1989</td>\n",
+       "      <td>BUT SERIOUSLY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PINK FLOYD</th>\n",
+       "      <td>1973</td>\n",
+       "      <td>THE DARK SIDE OF THE MOON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>QUEEN</th>\n",
+       "      <td>1981</td>\n",
+       "      <td>GREATEST HITS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>REM</th>\n",
+       "      <td>1992</td>\n",
+       "      <td>AUTOMATIC FOR THE PEOPLE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ROBBIE WILLIAMS</th>\n",
+       "      <td>1998</td>\n",
+       "      <td>I'VE BEEN EXPECTING YOU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SCISSOR SISTERS</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>SCISSOR SISTERS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SHANIA TWAIN</th>\n",
+       "      <td>1997</td>\n",
+       "      <td>COME ON OVER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SIMON &amp; GARFUNKEL</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>BRIDGE OVER TROUBLED WATER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SIMPLY RED</th>\n",
+       "      <td>1991</td>\n",
+       "      <td>STARS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SNOW PATROL</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>EYES OPEN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SPICE GIRLS</th>\n",
+       "      <td>1996</td>\n",
+       "      <td>SPICE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TAKE THAT</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>NEVER FORGET - THE ULTIMATE COLLECTION</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TRACY CHAPMAN</th>\n",
+       "      <td>1988</td>\n",
+       "      <td>TRACY CHAPMAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TRAVIS</th>\n",
+       "      <td>1999</td>\n",
+       "      <td>THE MAN WHO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>U2</th>\n",
+       "      <td>1987</td>\n",
+       "      <td>THE JOSHUA TREE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VERVE</th>\n",
+       "      <td>1997</td>\n",
+       "      <td>URBAN HYMNS</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Artysta\n",
-       "ABBA                        1975\n",
-       "ADELE                       2011\n",
-       "ALANIS MORISSETTE           1995\n",
-       "AMY WINEHOUSE               2006\n",
-       "BEATLES                     1967\n",
-       "BOB MARLEY & THE WAILERS    1984\n",
-       "COLDPLAY                    2000\n",
-       "CORRS                       1997\n",
-       "DAVID GRAY                  1998\n",
-       "DIDO                        2000\n",
-       "DIRE STRAITS                1985\n",
-       "ED SHEERAN                  2014\n",
-       "EMINEM                      2000\n",
-       "FLEETWOOD MAC               1977\n",
-       "GEORGE MICHAEL              1998\n",
-       "JAMES BLUNT                 2004\n",
-       "JEFF WAYNE                  1978\n",
-       "KEANE                       2004\n",
-       "KINGS OF LEON               2008\n",
-       "LADY GAGA                   2008\n",
-       "LEONA LEWIS                 2007\n",
-       "MADONNA                     1990\n",
-       "MEAT LOAF                   1977\n",
-       "MICHAEL BUBLE               2009\n",
-       "MICHAEL JACKSON             1982\n",
-       "MIKE OLDFIELD               1973\n",
-       "NORAH JONES                 2002\n",
-       "OASIS                       1995\n",
-       "ORIGINAL CAST RECORDING     1965\n",
-       "ORIGINAL SOUNDTRACK         1977\n",
-       "PAUL SIMON                  1986\n",
-       "PHIL COLLINS                1989\n",
-       "PINK FLOYD                  1973\n",
-       "QUEEN                       1981\n",
-       "REM                         1992\n",
-       "ROBBIE WILLIAMS             1998\n",
-       "SCISSOR SISTERS             2004\n",
-       "SHANIA TWAIN                1997\n",
-       "SIMON & GARFUNKEL           1970\n",
-       "SIMPLY RED                  1991\n",
-       "SNOW PATROL                 2006\n",
-       "SPICE GIRLS                 1996\n",
-       "TAKE THAT                   2005\n",
-       "TRACY CHAPMAN               1988\n",
-       "TRAVIS                      1999\n",
-       "U2                          1987\n",
-       "VERVE                       1997\n",
-       "Name: Rok, dtype: int64"
+       "                           Rok                                   Tytul\n",
+       "Artysta                                                               \n",
+       "ABBA                      1975                           GREATEST HITS\n",
+       "ADELE                     2011                                      21\n",
+       "ALANIS MORISSETTE         1995                      JAGGED LITTLE PILL\n",
+       "AMY WINEHOUSE             2006                           BACK TO BLACK\n",
+       "BEATLES                   1967    SGT PEPPER'S LONELY HEARTS CLUB BAND\n",
+       "BOB MARLEY & THE WAILERS  1984                                  LEGEND\n",
+       "COLDPLAY                  2000                              PARACHUTES\n",
+       "CORRS                     1997                         TALK ON CORNERS\n",
+       "DAVID GRAY                1998                            WHITE LADDER\n",
+       "DIDO                      2000                                NO ANGEL\n",
+       "DIRE STRAITS              1985                        BROTHERS IN ARMS\n",
+       "ED SHEERAN                2014                                       X\n",
+       "EMINEM                    2000                 THE MARSHALL MATHERS LP\n",
+       "FLEETWOOD MAC             1977                                 RUMOURS\n",
+       "GEORGE MICHAEL            1998        LADIES & GENTLEMEN - THE BEST OF\n",
+       "JAMES BLUNT               2004                          BACK TO BEDLAM\n",
+       "JEFF WAYNE                1978                   THE WAR OF THE WORLDS\n",
+       "KEANE                     2004                         HOPES AND FEARS\n",
+       "KINGS OF LEON             2008                       ONLY BY THE NIGHT\n",
+       "LADY GAGA                 2008                                THE FAME\n",
+       "LEONA LEWIS               2007                                  SPIRIT\n",
+       "MADONNA                   1990               THE IMMACULATE COLLECTION\n",
+       "MEAT LOAF                 1977                         BAT OUT OF HELL\n",
+       "MICHAEL BUBLE             2009                              CRAZY LOVE\n",
+       "MICHAEL JACKSON           1982                                THRILLER\n",
+       "MIKE OLDFIELD             1973                           TUBULAR BELLS\n",
+       "NORAH JONES               2002                       COME AWAY WITH ME\n",
+       "OASIS                     1995          WHAT'S THE STORY MORNING GLORY\n",
+       "ORIGINAL CAST RECORDING   1965                      THE SOUND OF MUSIC\n",
+       "ORIGINAL SOUNDTRACK       1977                                  GREASE\n",
+       "PAUL SIMON                1986                               GRACELAND\n",
+       "PHIL COLLINS              1989                           BUT SERIOUSLY\n",
+       "PINK FLOYD                1973               THE DARK SIDE OF THE MOON\n",
+       "QUEEN                     1981                           GREATEST HITS\n",
+       "REM                       1992                AUTOMATIC FOR THE PEOPLE\n",
+       "ROBBIE WILLIAMS           1998                 I'VE BEEN EXPECTING YOU\n",
+       "SCISSOR SISTERS           2004                         SCISSOR SISTERS\n",
+       "SHANIA TWAIN              1997                            COME ON OVER\n",
+       "SIMON & GARFUNKEL         1970              BRIDGE OVER TROUBLED WATER\n",
+       "SIMPLY RED                1991                                   STARS\n",
+       "SNOW PATROL               2006                               EYES OPEN\n",
+       "SPICE GIRLS               1996                                   SPICE\n",
+       "TAKE THAT                 2005  NEVER FORGET - THE ULTIMATE COLLECTION\n",
+       "TRACY CHAPMAN             1988                           TRACY CHAPMAN\n",
+       "TRAVIS                    1999                             THE MAN WHO\n",
+       "U2                        1987                         THE JOSHUA TREE\n",
+       "VERVE                     1997                             URBAN HYMNS"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "artist_album = data.groupby('Artysta').min('Rok')['Rok']\n",
-    "artist_album"
+    "artist_album = data.sort_values('Rok').groupby('Artysta').agg({'Rok': 'min', 'Tytul':'first'}, axis=1)\n",
+    "artist_album\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 49,
    "id": "65f2cb55",
    "metadata": {},
    "outputs": [],
